--- a/201806/20180613_03.md
+++ b/201806/20180613_03.md
@@ -10,7 +10,8 @@ digoal
 PostgreSQL , 大屏指标 , qps , long query , locks , active , idle in transaction , long idle in transaction , 2PC    
                 
 ----                                
-           
+[toc]
+
 ## 背景     
 最关键的一些数据库健康指标，趋势监测。    
     
